        CHANGES IN sparr VERSION 2.2-12

OVERVIEW

    o Added 'optim.control' argument to 'SLIK.adapt'
    


        CHANGES IN sparr VERSION 2.2-11

OVERVIEW

    o Updated citation information and package description
    


        CHANGES IN sparr VERSION 2.2-1

OVERVIEW

    o New experimental function 'SLIK.adapt' for simultaneous global-pilot bandwidth selection for adaptive densities
    o Newly visible function 'rimpoly' for random point generation
    o Additional control over small bandwidth action in leave-one-out bandwidth selectors
    o Improved edge-correction calculations for brute force adaptive leave-one-out
    o Updated citation information and documentation corrections
    
    
NEW FUNCTIONS

    o rimpoly
    Random spatial point generation based on a pixel image, returned with a polygonal window
    o SLIK.adapt
    Simultaneous bandwidth selector for global and pilot bandwidth for adaptive density estimates based on likelihood cross-validation
   
    
SIGNIFICANT USER-VISIBLE CHANGES

    o LIK.density, LSCV.density
    New argument 'zero.action' to provide greater control over the behaviour of leave-one-out
    calculations at very small bandwidths.
    


        CHANGES IN sparr VERSION 2.1-14

OVERVIEW

    o Updated citation information
    


        CHANGES IN sparr VERSION 2.1-13

OVERVIEW

    o Minor documentation link corrections



        CHANGES IN sparr VERSION 2.1-12

OVERVIEW

    o Includes 'weights' argument for bivariate.density



        CHANGES IN sparr VERSION 2.1-11

OVERVIEW

    o Citation information and NEWS file changes.

        
        
        CHANGES IN sparr VERSION 2.1-10

OVERVIEW

    o MAJOR CHANGES since versions <= 0.3-8; NO BACKWARDS COMPATIBILITY

    o Accompanying tutorial currently submitted for publication; contact maintainer
      for preprint or see https://arxiv.org/abs/1707.06888

    o User is directed to the examples as part of help("sparr") for
      further assistance
      
      