@@ -98,7 +98,7 @@
 #' LIK.density(pbccas)
 #' LSCV.density(pbccas)
 #'
-#' \dontrun{
+#' \donttest{
 #' #* FIXED 
 #' 
 #' # custom limits
