@@ -104,7 +104,7 @@
 #'
 #' @examples
 #' 
-#' \dontrun{
+#' \donttest{
 #' 
 #' data(pbc)
 #' h0 <- LSCV.risk(pbc,method="hazelton");h0
