@@ -138,7 +138,7 @@ find a suitable minimum.
 
 \examples{
 
-\dontrun{
+\donttest{
 
 data(pbc)
 pbccas <- split(pbc)$case
