@@ -12,7 +12,7 @@ risk surfaces via the density-ratio method and perform subsequent inference. Fix
 \details{
 \tabular{ll}{
 Package: \tab sparr\cr
-Date:\tab 2018-03-13\cr
+Date:\tab 2018-07-21\cr
 Version:\tab 2.2-12\cr
 License: \tab GPL (>= 2)\cr
 }
