@@ -68,7 +68,7 @@ component of \code{stob}.
 }
 \examples{
 
-\dontrun{
+\donttest{
 data(fmd)
 fmdcas <- fmd$cases
 fmdcon <- fmd$controls
